remove boilerplate; create separate launcher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
-project(roguey_v4)
+project(roguey)
 
 include(FetchContent)
 
@@ -7,5 +7,6 @@ FetchContent_Declare(json
         URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
 FetchContent_MakeAvailable(json)
 
-add_subdirectory(src)
+add_subdirectory(desktop)
+add_subdirectory(core)
 add_subdirectory(test)
