--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.27)
-project(roguey_v4)
+project(roguey)
 
-add_executable(roguey_v4_tests
-        roguey/LevelLoaderTest.cpp
+add_executable(test
+        src/LevelLoaderTest.cpp
 )
 
 # TODO: use fetchcontent here
 find_package(Catch2 REQUIRED)
 
-target_link_libraries(roguey_v4_tests
+target_link_libraries(test
         PRIVATE
+        core
         Catch2::Catch2WithMain
 )
