implement tests, tileset loader; run style checker

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -12,8 +12,12 @@ add_library(core
         include/core/systems/InputSystem.h
         src/systems/FrameTimerSystem.cpp
         include/core/systems/FrameTimerSystem.h
-        src/services/AssetLoader.cpp
-        include/core/services/AssetLoader.h
+        src/services/TextureLoader.cpp
+        include/core/services/TextureLoader.h
+        src/services/LevelLoader.cpp
+        include/core/services/LevelLoader.h
+        include/core/services/TilesetLoader.h
+        src/services/TilesetLoader.cpp
 )
 target_include_directories(core PUBLIC include)
 
@@ -23,6 +27,10 @@ target_compile_features(core PRIVATE cxx_std_23)
 # but there's some issue with SDL2_image
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
+
+include(FetchContent)
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
+FetchContent_MakeAvailable(json)
 
 target_link_libraries(core
         PUBLIC
