--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.27)
 project(roguey)
 
 add_executable(test
-        src/LevelLoaderTest.cpp
+        src/TilesetLoaderTest.cpp
+        src/Test.cpp
 )
+target_compile_features(test PRIVATE cxx_std_23)
 
 # TODO: use fetchcontent here
 find_package(Catch2 REQUIRED)
@@ -13,3 +15,11 @@ target_link_libraries(test
         core
         Catch2::Catch2WithMain
 )
+
+add_custom_target(test-assets
+        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/test/assets ${CMAKE_BINARY_DIR}/test/assets
+        DEPENDS ${CMAKE_SOURCE_DIR}/test/assets
+        COMMENT "Copying test assets to build directory"
+        VERBATIM
+)
+add_dependencies(test test-assets)
