--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(core
         include/core/services/TilesetLoader.h
         src/services/TilesetLoader.cpp
         include/core/systems/LevelRenderSystem.h
+        src/systems/LevelRenderSystem.cpp
 )
 target_include_directories(core PUBLIC include)
 
